# template_ws

./: README.md
GUIDE/: ROS2_Guide.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/camera_action_pkg/lib/camera_action_pkg/: camera_action_client_node  camera_action_node  camera_action_node = camera_action_pkg.camera_action_node:maincamera_action_server_node  camera_action_server_node
install/camera_action_pkg/share/camera_action_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera_pkg/lib/camera_pkg/: camera_node
install/camera_pkg/share/camera_pkg/: package.bash  package.sh  package.zsh
install/camera_srv_pkg/lib/camera_srv_pkg/: camera_srv_client_node  camera_srv_node  camera_srv_node = camera_srv_pkg.camera_srv_node:maincamera_srv_server_node = camera_srv_pkg.camera_srv_server_node:maincamera_srv_client_node  camera_srv_server_node
install/camera_srv_pkg/share/camera_srv_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/camera_v2_pkg/lib/camera_pkg/: camera_v2_node
install/camera_v2_pkg/share/camera_v2_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/my_interfaces/share/my_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_interfaces/share/my_interfaces/action/: Fibonacci.action  Fibonacci.idl  (+2 more)
install/robot2_pkg/share/robot2_pkg/: package.bash  package.zsh
install/robot_action_pkg/lib/robot_action_pkg/: robot_action_client_node  robot_action_node  robot_action_server_node
install/robot_action_pkg/share/robot_action_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_pkg/lib/robot_pkg/: robot_node
install/robot_pkg/share/robot_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_srv_pkg/lib/robot_srv_pkg/: robot_srv_client_node  robot_srv_node  robot_srv_server_node
install/robot_srv_pkg/share/robot_srv_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robot_v2_pkg/lib/robot_v2_pkg/: robot_v2_node
install/robot_v2_pkg/share/robot_v2_pkg/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/camera_action_pkg/: setup.cfg  setup.py
src/camera_action_pkg/camera_action_pkg/: camera_action_client_node.py  camera_action_node.py  camera_action_server_node.py
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: camera_node.py
src/camera_srv_pkg/: package.xml  setup.cfg  setup.py
src/camera_srv_pkg/camera_srv_pkg/: camera_srv_client_node.py  camera_srv_node.py  camera_srv_server_node.py
src/camera_v2_pkg/: package.xml  setup.cfg  setup.py
src/camera_v2_pkg/camera_v2_pkg/: camera_v2_node.py
src/my_interfaces/: CMakeLists.txt  package.xml
src/my_interfaces/action/: Fibonacci.action  Fibonacci2.action
src/my_interfaces/msg/: Dist.msg  Vel.msg
src/my_interfaces/srv/: Result.srv
src/robot_action_pkg/: CMakeLists.txt
src/robot_action_pkg/src/: robot_action_client_node.cpp  robot_action_node.cpp  robot_action_server_node.cpp
src/robot_pkg/: CMakeLists.txt  package.xml
src/robot_pkg/src/: robot_node.cpp
src/robot_srv_pkg/: CMakeLists.txt
src/robot_srv_pkg/src/: robot_srv_client_node.cpp  robot_srv_node.cpp  robot_srv_server_node.cpp
src/robot_v2_pkg/: CMakeLists.txt  package.xml
src/robot_v2_pkg/src/: robot_v2_node.cpp
(+202 files in other folders)
